sync: working tree (node/guard/main, wallet, explorer, infra)

--- a/www/wallet/index.html
+++ b/www/wallet/index.html
@@ -1,73 +1,4 @@
-<!doctype html>
-<html lang="ru" data-theme="auto">
-  <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>LOGOS Wallet (secure MVP)</title>
-    <link rel="stylesheet" href="./wallet.css"/>
-  </head>
-  <body>
-    <header class="topbar">
-      <div class="brand">LOGOS Wallet</div>
-      <div class="spacer"></div>
-      <div class="endpoint"><span id="apiBase">—</span></div>
-      <button id="themeToggle" class="btn secondary" title="Тёмная/светлая тема">🌓</button>
-    </header>
-
-    <main class="container">
-      <!-- Ключ -->
-      <section class="card">
-        <h2>Ключ и адрес</h2>
-        <div class="row">
-          <button id="gen"  class="btn">Сгенерировать ключ</button>
-          <button id="load" class="btn">Загрузить ключ</button>
-          <button id="copyRid" class="btn secondary" title="Скопировать RID">📋 RID</button>
-        </div>
-        <div class="mono mt8">RID: <span id="rid">—</span></div>
-      </section>
-
-      <!-- Учётная запись -->
-      <section class="card">
-        <h2>Учётная запись</h2>
-        <div class="row wrap">
-          <input id="acctRid" class="input grow" placeholder="RID (base58)"/>
-          <button id="getState" class="btn">Получить состояние</button>
-          <button id="devFaucet" class="btn warn" title="DEV: начислить тестовые LGN">Faucet (DEV)</button>
-        </div>
-        <div class="grid2 mt8">
-          <div>Баланс: <strong id="balance">0</strong></div>
-          <div>Нонс: <strong id="nonce">0</strong></div>
-        </div>
-      </section>
-
-      <!-- Перевод -->
-      <section class="card">
-        <h2>Передача</h2>
-        <div class="row wrap">
-          <input id="toRid" class="input grow" placeholder="В RID (base58)"/>
-          <input id="amount" class="input w120" type="number" min="1" placeholder="Сумма"/>
-          <button id="send" class="btn">Отправить</button>
-        </div>
-        <pre id="txOut" class="log mt8" aria-live="polite"></pre>
-      </section>
-
-      <!-- История -->
-      <section class="card">
-        <h2>История</h2>
-        <div class="row wrap">
-          <input id="histRid" class="input grow" placeholder="RID (если пусто — мой)"/>
-          <input id="histFrom" class="input w120" type="number" min="0" placeholder="from nonce"/>
-          <input id="histLimit" class="input w100" type="number" min="1" value="20" placeholder="limit"/>
-          <button id="loadHist" class="btn">Загрузить</button>
-          <button id="moreHist" class="btn secondary">Показать ещё</button>
-        </div>
-        <div id="histList" class="log mt8" aria-live="polite"></div>
-      </section>
-    </main>
-
-    <footer class="statusbar" id="statusBar" aria-live="polite">Готово</footer>
-
-    <script src="./wallet.js" type="module"></script>
-  </body>
-</html>
+<!doctype html><meta charset="utf-8">
+<title>Redirecting…</title>
+<meta http-equiv="refresh" content="0; url=./login.html">
+<a href="./login.html">Перейти в LOGOS Wallet</a>
