--- a/www/wallet/app.html
+++ b/www/wallet/app.html
@@ -1,185 +1,123 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="utf-8"/>
+  <meta http-equiv="Cache-Control" content="no-store"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>LOGOS Wallet — Кошелёк</title>
-  <style>
-    body{
-      font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;
-      margin:0;background:#0b0c10;color:#e6edf3
-    }
-    header{
-      padding:12px 20px 10px;
-      background:#11151a;
-      border-bottom:1px solid #1e242c;
-      position:sticky;top:0;z-index:10
-    }
-    h1{font-size:18px;margin:0}
-    header .sub{
-      font-size:12px;
-      opacity:.8;
-      margin-top:4px
-    }
-    main{
-      max-width:1024px;
-      margin:24px auto;
-      padding:0 16px 40px
-    }
-    section{
-      background:#11151a;
-      margin:16px 0;
-      border-radius:12px;
-      padding:16px;
-      border:1px solid #1e242c
-    }
-    h3{margin:0 0 8px;font-size:16px}
-    label{display:block;margin:8px 0 6px}
-    .grid{
-      display:grid;
-      grid-template-columns:1fr 1fr;
-      gap:12px
-    }
-    @media (max-width:900px){
-      .grid{grid-template-columns:1fr}
-    }
-    input,button,textarea{
-      width:100%;
-      padding:10px;
-      border-radius:10px;
-      border:1px solid #2a313a;
-      background:#0b0f14;
-      color:#e6edf3;
-      box-sizing:border-box;
-      font-size:14px;
-    }
-    textarea{resize:vertical;min-height:70px}
-    button{
-      cursor:pointer;
-      border:1px solid #3b7ddd;
-      background:#1665c1;
-    }
-    button.secondary{background:#1b2129}
-    button:disabled{opacity:.6;cursor:not-allowed}
-    .mono{font-family:ui-monospace,Menlo,Consolas,monospace}
-    small{opacity:.8}
-    pre{
-      background:#0b0f14;
-      border-radius:10px;
-      border:1px solid #2a313a;
-      padding:8px;
-      font-size:13px;
-      white-space:pre-wrap;
-    }
-  </style>
+  <title>LOGOS Wallet</title>
+  <link rel="stylesheet" href="/shared/wallet-theme.css?v=20251212_04"/>
+  <link rel="stylesheet" href="./app.css?v=20251212_04"/>
 </head>
-<body>
-<header>
-  <h1>LOGOS Wallet — Кошелёк</h1>
-  <div class="sub">Endpoint: <span id="endpoint" class="mono"></span></div>
-</header>
-<main>
-  <section>
-    <div class="grid">
-      <div>
-        <h3>Твой RID / Публичный ключ</h3>
-        <textarea id="pub" class="mono" rows="4" readonly></textarea>
-        <div style="display:flex;gap:10px;margin-top:10px">
-          <button id="btn-lock" class="secondary">Выйти (заблокировать)</button>
-          <button id="btn-nonce" class="secondary">Получить nonce</button>
+<body class="logos-ui">
+  <header class="topbar">
+    <div class="topbar__inner">
+      <div class="brand">
+        <div class="brand__mark"><span>LRB</span></div>
+        <div>
+          <div class="brand__title">LOGOS Wallet</div>
+          <div class="brand__sub">Local keys · Signed in browser · API ready</div>
         </div>
-        <p><small>
-          Ключи лежат только в памяти этой вкладки. После 15 минут бездействия или
-          закрытия вкладки кошелёк автоматически блокируется — при следующем входе
-          нужен пароль.
-        </small></p>
       </div>
-      <div>
-        <h3>Баланс</h3>
-        <div class="grid">
-          <div>
-            <label>RID</label>
-            <input id="rid-balance" class="mono" placeholder="RID (base58)"/>
-          </div>
-          <div>
-            <label>&nbsp;</label>
-            <button id="btn-balance">Показать баланс</button>
-          </div>
-        </div>
-        <pre id="out-balance" class="mono" style="margin-top:12px;min-height:40px"></pre>
+      <div class="topbar__right">
+        <div class="pill">API: <span id="endpoint" class="mono">/api</span></div>
+        <button id="btn-lock" class="secondary" type="button">Выйти (лок)</button>
       </div>
     </div>
-  </section>
+  </header>
 
-  <section>
-    <h3>Подпись и отправка (batch)</h3>
-    <div class="grid">
-      <div>
-        <label>Получатель (RID)</label>
+  <main class="container">
+    <div class="stack">
+      <section class="card">
+        <header class="card__head">
+          <h2>Ключи</h2>
+          <p class="muted">RID = base58(pubkey). Приватный ключ зашифрован локально (AES‑GCM + PBKDF2).</p>
+        </header>
+        <textarea id="pub" class="mono" readonly spellcheck="false"></textarea>
+        <pre id="out-status" class="mono">OK</pre>
+      </section>
+
+      <section class="card">
+        <header class="card__head">
+          <h2>Баланс</h2>
+        </header>
+
+        <label>RID</label>
+        <input id="rid-balance" class="mono" placeholder="RID"/>
+
+        <div class="row">
+          <button id="btn-balance" class="primary" type="button">Показать баланс</button>
+          <button id="btn-nonce" type="button">Обновить nonce</button>
+        </div>
+
+        <pre id="out-balance" class="mono"></pre>
+      </section>
+
+      <section class="card">
+        <header class="card__head">
+          <h2>Отправить транзакцию</h2>
+        </header>
+
+        <label>Кому (RID)</label>
         <input id="to" class="mono" placeholder="RID получателя"/>
-      </div>
-      <div>
-        <label>Сумма (LGN)</label>
+
+        <label>Сумма (micro‑LGN)</label>
         <input id="amount" type="number" min="1" step="1" value="1"/>
-      </div>
-    </div>
-    <div class="grid">
-      <div>
-        <label>Nonce</label>
-        <input id="nonce" type="number" min="1" step="1" placeholder="нажми «Получить nonce»"/>
-      </div>
-      <div>
-        <label>&nbsp;</label>
-        <button id="btn-send">Подписать и отправить</button>
-      </div>
-    </div>
-    <pre id="out-send" class="mono" style="margin-top:12px;min-height:40px"></pre>
-  </section>
 
-  <section>
-    <h3>Стейкинг (delegate / undelegate / claim)</h3>
-    <p><small>
-      Здесь можно залочить токены в стейкинг (delegate), снять часть/всё (undelegate) и
-      забрать накопленные награды (claim). Все операции идут через REST /stake/*.
-    </small></p>
-    <div class="grid">
-      <div>
-        <label>Текущий статус стейкинга</label>
-        <pre id="out-stake" class="mono" style="min-height:80px"></pre>
-        <button id="btn-stake-refresh" class="secondary" style="margin-top:8px">
-          Обновить статус стейкинга
-        </button>
-      </div>
-      <div>
-        <label>Застейкать (делегировать, LGN)</label>
+        <label>Nonce (авто)</label>
+        <input id="nonce" type="number" readonly/>
+
+        <div class="row">
+          <button id="btn-send" class="primary" type="button">Подписать и отправить</button>
+        </div>
+
+        <pre id="out-send" class="mono"></pre>
+      </section>
+
+      <section class="card">
+        <header class="card__head">
+          <h2>Стейкинг</h2>
+        </header>
+
+        <div class="row">
+          <button id="btn-stake-refresh" type="button">Обновить статус</button>
+          <button id="btn-stake-claim" class="secondary" type="button">Claim</button>
+        </div>
+
+        <label>Delegate (LGN)</label>
         <input id="stake-amount" type="number" min="1" step="1" value="0"/>
-        <button id="btn-stake-delegate" style="margin-top:8px">Делегировать</button>
+        <button id="btn-stake-delegate" class="primary" type="button">Делегировать</button>
 
-        <label style="margin-top:14px">Разстейкать (undelegate, LGN)</label>
+        <label>Undelegate (LGN)</label>
         <input id="unstake-amount" type="number" min="1" step="1" value="0"/>
-        <button id="btn-stake-undelegate" style="margin-top:8px">Снять делегацию</button>
+        <button id="btn-stake-undelegate" class="secondary" type="button">Снять делегацию</button>
 
-        <label style="margin-top:14px">Накопленные награды</label>
-        <button id="btn-stake-claim" style="margin-top:8px">Заявить награду (claim)</button>
-      </div>
-    </div>
-  </section>
+        <pre id="out-stake" class="mono"></pre>
+      </section>
 
-  <section>
-    <h3>Мост rToken (депозит, демо)</h3>
-    <div class="grid">
-      <div>
+      <section class="card">
+        <header class="card__head">
+          <h2>Bridge deposit (demo)</h2>
+        </header>
+
+        <label>RID</label>
+        <input id="rid-bridge" class="mono" placeholder="RID"/>
+
+        <label>Amount</label>
+        <input id="amount-bridge" type="number" min="1" step="1" value="1"/>
+
         <label>ext_txid</label>
         <input id="ext" class="mono" placeholder="например eth_txid_0xabc"/>
-      </div>
-      <div>
-        <label>&nbsp;</label>
-        <button id="btn-deposit">Deposit rLGN (demo)</button>
-      </div>
+
+        <div class="row">
+          <button id="btn-deposit" type="button">Deposit</button>
+        </div>
+
+        <pre id="out-bridge" class="mono"></pre>
+      </section>
     </div>
-    <pre id="out-bridge" class="mono" style="margin-top:12px;min-height:40px"></pre>
-  </section>
-</main>
-<script src="./app.js?v=20251129_01" defer></script>
+  </main>
+
+  <script src="/shared/tweetnacl.min.js?v=20251212_04" defer></script>
+  <script src="./app.js?v=20251212_04" defer></script>
 </body>
 </html>
