--- a/www/wallet/login.html
+++ b/www/wallet/login.html
@@ -2,155 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8"/>
+  <meta http-equiv="refresh" content="0; url=./auth.html"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>LOGOS Wallet — Вход</title>
-  <style>
-    body{
-      font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;
-      margin:0;background:#0b0c10;color:#e6edf3
-    }
-    header{
-      padding:16px 20px;background:#11151a;
-      border-bottom:1px solid #1e242c
-    }
-    h1{font-size:18px;margin:0}
-    main{
-      max-width:820px;
-      margin:32px auto;
-      padding:0 16px 48px
-    }
-    section{
-      background:#11151a;
-      margin:16px 0;
-      border-radius:12px;
-      padding:16px;
-      border:1px solid #1e242c
-    }
-    label{display:block;margin:8px 0 6px}
-    input,button,textarea{
-      width:100%;
-      padding:10px;
-      border-radius:10px;
-      border:1px solid #2a313a;
-      background:#0b0f14;
-      color:#e6edf3;
-      box-sizing:border-box;
-      font-size:14px;
-    }
-    textarea{
-      min-height:70px;
-      resize:vertical;
-    }
-    button{
-      cursor:pointer;
-      border:1px solid #3b7ddd;
-      background:#1665c1;
-    }
-    button.secondary{background:#1b2129}
-    button:disabled{opacity:.6;cursor:not-allowed}
-    small{opacity:.8}
-    .grid{
-      display:grid;
-      grid-template-columns:1fr 1fr;
-      gap:12px
-    }
-    @media (max-width:720px){
-      .grid{grid-template-columns:1fr}
-    }
-    .mono{font-family:ui-monospace,Menlo,Consolas,monospace}
-    ul{list-style:none;padding:0;margin:8px 0}
-    li{
-      padding:8px;
-      border:1px solid #2a313a;
-      border-radius:8px;
-      margin-bottom:6px;
-      cursor:pointer;
-      background:#0b0f14
-    }
-    .muted{font-size:13px;opacity:.8}
-    #mnemonicSection{margin-top:24px}
-    #out{
-      margin-top:12px;
-      font-family:ui-monospace,Menlo,Consolas,monospace;
-      font-size:13px;
-      white-space:pre-wrap;
-    }
-  </style>
+  <title>LOGOS Wallet</title>
 </head>
 <body>
-<header>
-  <h1>LOGOS Wallet — Secure (WebCrypto + IndexedDB + 16 слов)</h1>
-</header>
-<main>
-  <section>
-    <h3>Вход в существующий кошелёк</h3>
-    <label>RID</label>
-    <input id="loginRid" class="mono" placeholder="RID (base58) или выбери ниже"/>
-    <label>Пароль</label>
-    <input id="loginPass" type="password" placeholder="Пароль, которым шифровали ключ"/>
-
-    <div class="grid" style="margin-top:12px">
-      <button id="btn-login">Войти по RID + пароль</button>
-      <button id="btn-list"  class="secondary">Показать сохранённые RID</button>
-    </div>
-
-    <div id="listWrap" style="display:none;margin-top:10px">
-      <div class="muted">Локально сохранённые RID (кликни, чтобы подставить):</div>
-      <ul id="ridList"></ul>
-    </div>
-  </section>
-
-  <section>
-    <h3>Создать новый кошелёк</h3>
-    <p class="muted">
-      Ключ генерируется в браузере, приватник шифруется с помощью пароля (PBKDF2 + AES‑GCM).
-      Пароль: минимум 10 символов, буквы + цифры.
-      После создания будет показана резервная фраза из 16 слов — <b>обязательно запиши её</b>.
-    </p>
-    <label>Новый пароль</label>
-    <input id="createPass" type="password" placeholder="Минимум 10 символов, буквы + цифры"/>
-    <button id="btn-create" style="margin-top:12px">Создать новый RID + фразу</button>
-
-    <section id="mnemonicSection" style="display:none">
-      <h4>Резервная фраза (16 слов)</h4>
-      <p class="muted">
-        Запиши эту фразу на бумагу и храни в безопасном месте. Это <b>единственный</b> способ
-        восстановить кошелёк на новом устройстве. Мы нигде её не храним.
-      </p>
-      <label>Фраза (только чтение)</label>
-      <textarea id="mnemonicShow" class="mono" readonly></textarea>
-      <label>Повтори фразу для проверки</label>
-      <textarea id="mnemonicConfirm" class="mono" placeholder="Введите те же 16 слов ещё раз"></textarea>
-      <button id="btn-mnemonic-ok" style="margin-top:10px">
-        Я записал фразу, перейти в кошелёк
-      </button>
-    </section>
-  </section>
-
-  <section>
-    <h3>Восстановить кошелёк по фразе</h3>
-    <p class="muted">
-      Если устройство потеряно/очищено, используй 16‑словную фразу и задай <b>новый</b> пароль.
-      Пароль можно поменять — фраза остаётся корнем ключа.
-    </p>
-    <label>Резервная фраза (16 слов)</label>
-    <textarea id="restoreMnemonic" class="mono" placeholder="введите 16 слов через пробел"></textarea>
-    <label>Новый пароль</label>
-    <input id="restorePass" type="password" placeholder="Минимум 10 символов, буквы + цифры"/>
-    <button id="btn-restore" style="margin-top:12px">Восстановить кошелёк по фразе</button>
-  </section>
-
-  <section>
-    <h3>Сервис</h3>
-    <p class="muted">
-      Сброс (удаление всех локальных аккаунтов) доступен только на <code>localhost</code> — для разработки.
-      В продакшене кнопка спрятана.
-    </p>
-    <button id="btn-reset" class="secondary">Сбросить все аккаунты (DEV)</button>
-  </section>
-
-  <pre id="out">Статус: жду действий…</pre>
-</main>
-<script src="./auth.js?v=20251129_01" defer></script>
+  <p>Redirect to <a href="./auth.html">auth.html</a>…</p>
 </body>
 </html>
